--- a/ohjelmisto2/css/style.css
+++ b/ohjelmisto2/css/style.css
@@ -16,16 +16,19 @@ html {
 }
 
 header {
+
     display: flex;
     justify-content: flex-end;
 }
-
 header h1 {
+
     background-color: #748a52;
     position: fixed;
     width: 70%;
-    bottom: 868px;
+    top: -30px;
+  
     color: floralwhite;
+    
 
 }
 
@@ -66,9 +69,10 @@ body {
 
 
 p {
+    padding: 40px 60px;
     text-align: center;
+    
 }
-
 
 li {
     width: calc(100% / 3)
@@ -145,14 +149,25 @@ article img {
 
 figcaption {
     padding: 1rem;
+    display:block;
+    word-wrap: break-word;
     
 }
 
 section figure {
    
     margin: 0 1rem 1rem 0;
-    border: 1px black solid;
+    border: none;
     border-radius: 8px;
+ 
+}
+
+.product figure {
+    margin: 0 1rem 1rem 0;
+    border: none;
+    border-radius: 8px;
+    background-color: #b8c972;
+
 }
 
 .desc {
@@ -186,10 +201,10 @@ aside {
     text-align: left;
 }
 iframe {
-    
-    width: 500px;
-    height: 300px;
-    margin-left: 20px;
+    max-width: 100%;
+    width: 600px;
+    height: 400px;
+    margin-left: 60px;
     
 }
 
@@ -203,7 +218,7 @@ footer {
 
 @media screen and (max-width: 768px) {
     .sivu {
-        width: 90%;
+        width: 70%;
         margin: auto;
      
     }
@@ -217,12 +232,7 @@ footer {
         
     }
 
-    header h1 {
-        background-color: #748a52;
-        position: fixed;
-        width: 90%;
-       
-    }
+  
     nav {
 
         position: fixed;
@@ -230,23 +240,20 @@ footer {
   
         
     }
-
-
-    section {
-  
-        background-color:#c0d479;
-        width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0 auto;
-        padding: 200px 5px;
-        
-        
-        
-      
+    article {
+   
+        width: 100%;
+        padding: 1rem;  
+        box-sizing: border-box;
+        text-align: center;
+    
     }
+
+
+
     iframe {
         display: flex;
+        max-width: 100%;
         width:250px;
         height: 300px;
         margin-left: 0px;
@@ -254,16 +261,36 @@ footer {
     }
 
 
-
-
-
     section figure {
-        margin: 0 1rem 1rem 0;
-        border: 1.5px black solid;
-        border-radius: 8px;
+        display:block;
+        text-align: center;
+        color:black;
     }
+ 
+    
     figcaption {
         padding: 1rem;
+        display:block;
+        word-wrap: break-word;
+        
+    }
+    header h1 {
+
+        background-color: #748a52;
+        position: fixed;
+        width: 70%;
+        top: -30px;
+      
+        color: transparent
+        
+    
+    }
+    p {
+        padding: 40px 60px;
+        text-align: center;
+        overflow-wrap: break-word;
+    word-break: break-all;
+
         
     }
 }
